--- a/css/estilos.css
+++ b/css/estilos.css
@@ -11,11 +11,30 @@ body{
 {
     width: 70%;
     padding: 1em;
-    text-align: center;
+    text-align: left;
     border: 1px solid #ddd;
     margin: 0 auto;
 }
 
 #container h1{
     font-size: 20px;
+}
+
+#cabecera{
+    background: #33a;
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5 em;
+    box-shadow: 0px 2px 50px 0px rgba(0, 0, 0, 0.5);
+}
+
+#cabecera tagline{
+    font-weight: normal;
+    font-size: 0.8em;
+    margin: 0 0 0 0 ;
+}
+
+#post{
+    padding: 1em;
 }
