--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10,7 +10,7 @@ body{
 #container
 {
     width: 70%;
-    padding: 1em;
+    /* padding: 1em; */
     text-align: left;
     border: 1px solid #ddd;
     margin: 0 auto;
