--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,5 @@
 body{
-    color: #333;
+    color: red;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
@@ -25,7 +25,7 @@ body{
     color: white;
     font-weight: bold;
     margin: 0;
-    padding: 0.5 em;
+    padding: 0.5em;
     box-shadow: 0px 2px 50px 0px rgba(0, 0, 0, 0.5);
 }
 
